# COMSOL_Multiphysics_MCP_6_4_Calibrated

./: .gitignore  AGENTS.md  DEPLOYMENT.md  DEPLOYMENT_CN.md  README.md  README_CN.md  README_CN_upstream.md  README_upstream.md  pyproject.toml  settings.json  test_e2e_cap.py  test_study_mesh.py
.github/workflows/: ci.yml  dependency_report.yml
comsol_mcp/: artifact_chain.py  build_identity.py  compatibility.py  compatibility_manifest.json  deployment_manifest.json  environment_identity.py  operation_arbiter.py  path_policy.py  schema_registry.py  server.py  settings.py
comsol_mcp/async_handler/: solver.py
comsol_mcp/contracts/: __init__.py  job_submission.py  structural.py
comsol_mcp/durable/: __init__.py  canonical.py  io.py
comsol_mcp/evidence/: branch_continuation.py  contracts.py  convergence_evaluation.py  field_dataset.py  field_interpolation.py  field_manifest.py  field_matrix.py  field_pipeline.py  field_render.py  integrity_controls.py  integrity_verifier.py  material_expressions.py  portfolio_verifier.py  reference_power_acceptance.py  reference_power_gate.py  spectral_characterization.py  visual_review.py
comsol_mcp/jobs/: __init__.py  attached_backend.py  attached_runtime.py  branch_continuation_campaign.py  branch_continuation_campaign_rows.py  branch_continuation_campaign_runner.py  branch_continuation_campaign_worker.py  cancel_worker.py  convergence_campaign.py  convergence_campaign_rows.py  convergence_campaign_runner.py  convergence_campaign_worker.py  field_review.py  manager.py  native_cancel_probe.py  native_cancel_profiles.json  resource_admission.py  spectral_audit.py  spectral_characterization.py  spectral_level_execution.py  spectral_progress.py  spectral_rows.py  spectral_runner.py  spectral_stages.py  spectral_worker.py  store.py  validation_collectors.py  validation_matrix.py  validation_runner.py  validation_worker.py  worker.py
comsol_mcp/knowledge/: __init__.py  embedded.py  lexical_manual.py  lexical_worker.py  semantic_contracts.py  semantic_index.py  semantic_process.py  semantic_runtime.py  semantic_worker.py
comsol_mcp/shared_session/: attach_request.py  cleanup.py  contracts.py  identity.py  (+4 more)
config/: claude-code-mcp.example.json
constraints/: minimum_supported_py314.txt  release_locked_py314.txt  tested_versions.json
development_kit/: README.md
docs/: profile_migration.md  release_checklist.md
recipes/: _paths.py  acdc_2d_differential_coils.py  mim_drude_sweep.py  mim_lml_continuous.py  mim_patch_partition.py
release/: support_matrix.json
scripts/: installed_package_probe.py  run_real_release_gate.py
src/: __init__.py  artifact_chain.py  build_identity.py  deployment_manifest.json  environment_identity.py  operation_arbiter.py  path_policy.py  schema_registry.py  server.py  settings.py
tests/: test_basic.py  test_cancel_state_machine.py  test_clientapi_properties.py  test_control_plane_metrics.py  test_deployment_identity.py  test_evidence_contracts.py  test_field_artifacts.py  test_field_bundle.py  test_field_dataset.py  test_field_discovery.py  test_field_manifest.py  test_field_render.py  test_field_sampling.py  test_field_tools.py  test_geometry.py  test_h1_release_orchestrator.py  test_incidence_config.py  test_integration_boundaries.py  test_jobs_h1a.py  test_material_expressions.py  test_mim_patch.py  test_model.py  test_native_cancel_probe.py  test_ownership.py  test_parameters.py  test_physics.py  test_process_control.py  test_process_inventory_stress.py  test_real_fixture_contract.py  test_recipe_paths.py  test_release_engineering.py  test_resource_admission.py  test_results.py  test_semantic_retrieval.py  test_semantic_tools.py  test_semantic_worker_protocol.py  test_server.py  test_study.py  test_tool_catalog.py  test_tool_profiles.py  (+6 more)
(+281 files in other folders)
