[project]
name = "comsol-mcp"
version = "0.1.0"
description = "MCP Server for COMSOL Multiphysics simulation automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mph>=1.3.0",
    "numpy>=2.0,<3.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "scipy>=1.13,<2.0",
]

[project.optional-dependencies]
manuals = [
    "pymupdf>=1.24.0",
]
semantic-pdf = [
    "pymupdf>=1.24.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
semantic-docs = [
    "numpy>=2.0,<3.0",
    "sentence-transformers>=3.4,<3.5",
]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
comsol-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not integration'"
markers = [
    "integration: launches a real COMSOL probe in a dedicated subprocess",
]
