[project]
name = "comsol-mcp"
dynamic = ["version"]
description = "A safety-focused MCP server for reproducible, provenance-bound COMSOL Multiphysics 6.4 automation and evidence workflows."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "mcp>=1.28.1,<2",
    "matplotlib>=3.9,<4.0",
    "mph>=1.3.1,<1.4",
    "numpy>=2.0,<3.0",
    "pydantic>=2.0.0,<3",
    "psutil>=5.9.0,<8",
    "scipy>=1.13,<2.0",
]

[project.optional-dependencies]
manuals = [
    "pymupdf>=1.24.0",
]
semantic-docs = [
    "numpy>=2.0,<3.0",
    "sentence-transformers>=3.4,<4",
]
dev = [
    "build>=1.2.0",
    "coverage>=7.15,<8",
    "hypothesis>=6.156,<7",
    "mypy>=1.20,<2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15,<1",
]

[project.scripts]
comsol-mcp = "comsol_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "comsol_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["comsol_mcp", "src"]

[tool.hatch.build.targets.wheel.force-include]
"settings.json" = "comsol_mcp/settings.json"

[tool.hatch.build.targets.sdist]
exclude = ["/development_kit"]

[tool.pytest.ini_options]
testpaths = ["development_kit/tests"]
addopts = "--strict-markers -m 'not integration'"
markers = [
    "integration: launches a real COMSOL probe in a dedicated subprocess",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"development_kit/tests/*.py" = ["S101", "S603"]
